# HC22-BenGivens-SeniorProject

./: .gitignore  Cargo.toml  Rocket.toml  build.py  readme.md
app/: app.html  elm.json  styles.css
app/src/: Analyze.elm  Explore.elm  Main.elm  Search.elm  Summary.elm
db/: messages.sqlite
src/: api.rs  client.rs  database.rs  main.rs
