[package]
name = "error_explorer"
version = "0.1.0"
edition = "2018"

[dependencies]
serde_json = "1.0"
tempfile = "3.2"

[dependencies.rocket]
version = "0.5.0-rc.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["sqlite_pool"]

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tantivy]
version = "0.16.1"